@@ -32,6 +32,7 @@
             nRF5x: Don't sleep if we received any events since last sleep (fix #1572)
             Remove limit on the number of scopes that can be searched (fix #948)
             String.split - improve docs, split with RegExp now inserts the text after the final match
+            RegExp: Add '|' operator (fix #1503)
 
      2v01 : ESP32: update to esp-idf V3.1
             Fix issues with Class Extends
